Correct the path for the included files so as to handle the test "simple"
	* msvc/simple/simple.vcproj: here

Signed-of-by: Keith Francois <francois.keith@aist.go.jp>

--- a/msvc/simple/simple.vcproj
+++ b/msvc/simple/simple.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="shift_jis"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="simple"
 	ProjectGUID="{C2F563F8-9C86-47EB-B3A9-F687D6CF62BC}"
 	RootNamespace="simple"
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\src&quot;;&quot;$(ProjectDir)\..\..\include&quot;;&quot;$(ProjectDir)\..\..\tests&quot;;&quot;$(ProjectDir)\..\roboptim-core&quot;;&quot;$(ProjectDir)&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\src&quot;;&quot;$(ProjectDir)\..\..\include&quot;;&quot;$(ProjectDir)\..\..\tests&quot;;&quot;$(ProjectDir)\..\..\tests\shared-tests&quot;;&quot;$(ProjectDir)\..\roboptim-core&quot;;&quot;$(ProjectDir)&quot;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -115,7 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\src&quot;;&quot;$(ProjectDir)\..\..\include&quot;;&quot;$(ProjectDir)\..\..\tests&quot;;&quot;$(ProjectDir)\..\roboptim-core&quot;;&quot;$(ProjectDir)&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\src&quot;;&quot;$(ProjectDir)\..\..\include&quot;;&quot;$(ProjectDir)\..\..\tests&quot;;&quot;$(ProjectDir)\..\..\tests\shared-tests&quot;;&quot;$(ProjectDir)\..\roboptim-core&quot;;&quot;$(ProjectDir)&quot;"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
