--- a/msvc/INSTALL/INSTALL.vcproj
+++ b/msvc/INSTALL/INSTALL.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="INSTALL"
 	ProjectGUID="{97411593-CAE3-4A98-BD15-41A81614C4FC}"
 	RootNamespace="INSTALL"
@@ -19,7 +19,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="10"
-			InheritedPropertySheets="..\roboptim-core\rob_opt.vsprops"
+			InheritedPropertySheets="..\roboptim-core\roboptim-core.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -33,7 +33,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="set root_directory=%ROB_OPTIM_INSTALL_DIR%&#x0D;&#x0A;&#x0D;&#x0A;XCOPY ..\..\include %root_directory%\include /S /E /C /I /F /K /Y /EXCLUDE:excludedFiles.txt&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.lib %root_directory%\lib\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.pdb %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-core-dummy-plugind.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-core-dummy-plugind.pdb %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;"
+				CommandLine="set root_directory=%ROB_OPTIM_INSTALL_DIR%&#x0D;&#x0A;&#x0D;&#x0A;XCOPY ..\..\include %root_directory%\include /S /E /C /I /F /K /Y /EXCLUDE:excludedFiles.txt&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.lib %root_directory%\lib\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Debug\roboptim-cored.pdb %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\roboptim-core.vsprops %root_directory%\share\msvc\   /S  /C /I /F /K /Y&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -41,7 +41,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="10"
-			InheritedPropertySheets="..\roboptim-core\rob_opt.vsprops"
+			InheritedPropertySheets="..\roboptim-core\roboptim-core.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -56,7 +56,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="set root_directory=%ROB_OPTIM_INSTALL_DIR%&#x0D;&#x0A;&#x0D;&#x0A;XCOPY ..\..\include %root_directory%\include /S /E /C /I /F /K /Y /EXCLUDE:excludedFiles.txt&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core-dummy-plugin.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core.lib %root_directory%\lib\   /S /E /C /I /F /K /Y&#x0D;&#x0A;"
+				CommandLine="set root_directory=%ROB_OPTIM_INSTALL_DIR%&#x0D;&#x0A;&#x0D;&#x0A;XCOPY ..\..\include %root_directory%\include /S /E /C /I /F /K /Y /EXCLUDE:excludedFiles.txt&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core-dummy-plugin.dll %root_directory%\bin\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\Release\roboptim-core.lib %root_directory%\lib\   /S /E /C /I /F /K /Y&#x0D;&#x0A;XCOPY ..\roboptim-core\roboptim-core.vsprops %root_directory%\share\msvc\   /S  /C /I /F /K /Y&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
