Replace deprecated property sheet boost.vsprops by 	roboptim-core.vsprops
	* msvc/roboptim-core/boost.vsprops: Remove deprecated property sheet
	* msvc/simple/simple.vcproj: Replace the property sheet boost.vsprops
		by roboptim-core.vsprops, which contains more information
		and will be installed
	* msvc/roboptim-core/roboptim-core.vcproj,
	* msvc/roboptim-core-dummy-plugin/roboptim-core-dummy-plugin.vcproj

Signed-off-by: Keith Francois <francois.keith@aist.go.jp>

--- a/msvc/roboptim-core/roboptim-core.vcproj
+++ b/msvc/roboptim-core/roboptim-core.vcproj
@@ -19,7 +19,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets=".\boost.vsprops"
+			InheritedPropertySheets=".\roboptim-core.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -93,7 +93,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets=".\boost.vsprops"
+			InheritedPropertySheets=".\roboptim-core.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
