--- a/msvc/simple/simple.vcproj
+++ b/msvc/simple/simple.vcproj
@@ -19,7 +19,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\roboptim-core\boost.vsprops"
+			InheritedPropertySheets="..\roboptim-core\roboptim-core.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -92,7 +92,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\roboptim-core\boost.vsprops"
+			InheritedPropertySheets="..\roboptim-core\roboptim-core.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
