--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "build-aux"]
 	path = build-aux
-	url = roboptim:build-aux.git
+	url = git://github.com/laas/shared-build-aux.git
 [submodule "tests/shared-tests"]
 	path = tests/shared-tests
-	url = roboptim:shared-tests
+	url = git://github.com/laas/roboptim-shared-tests.git
