Switch to CMake.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "build-aux"]
-	path = build-aux
-	url = git://github.com/laas/shared-build-aux.git
+[submodule "jrl-cmakemodules"]
+	path = jrl-cmakemodules
+	url = git://github.com/jrl-umi3218/jrl-cmakemodules.git
 [submodule "tests/shared-tests"]
 	path = tests/shared-tests
 	url = git://github.com/laas/roboptim-shared-tests.git
+[submodule "cmake"]
+	path = cmake
+	url = git://github.com/jrl-umi3218/jrl-cmakemodules.git
