--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,13 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 
 
+SET(COMMON_HEADERS
+  ${HEADERS}
+  shared-tests/common.hh
+  shared-tests/hs071.hh
+  )
+
+
 # ROBOPTIM_CORE_TEST(NAME)
 # ------------------------
 #
@@ -36,7 +43,7 @@ ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 # Boost and add it to the test suite.
 #
 MACRO(ROBOPTIM_CORE_TEST NAME)
-  ADD_EXECUTABLE(${NAME} ${NAME}.cc)
+  ADD_EXECUTABLE(${NAME} ${NAME}.cc ${COMMON_HEADERS})
   ADD_TEST(${NAME} ${RUNTIME_OUTPUT_DIRECTORY}/${NAME})
 
   TARGET_LINK_LIBRARIES(${NAME} roboptim-core)
@@ -49,6 +56,7 @@ ENDMACRO(ROBOPTIM_CORE_TEST)
 # simple
 # Link the dummy solver with this test to bypass the plug-in system.
 ADD_EXECUTABLE(simple
+  ${COMMON_HEADERS}
   simple.cc
   ${CMAKE_SOURCE_DIR}/src/roboptim-core-dummy-plugin.cc)
 TARGET_LINK_LIBRARIES(simple roboptim-core ${Boost_LIBRARIES})
