--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,54 +26,54 @@ SET(PROJECT_DESCRIPTION "RobOptim core")
 SET(PROJECT_URL "http://github.com/laas/roboptim-core")
 
 SET(HEADERS
-  include/roboptim/core/result.hh
-  include/roboptim/core/identity-function.hh
-  include/roboptim/core/solver-factory.hxx
-  include/roboptim/core/problem.hxx
-  include/roboptim/core/util.hxx
-  include/roboptim/core/n-times-derivable-function.hh
-  include/roboptim/core/solver.hxx
-  include/roboptim/core/sys.hh
-  include/roboptim/core/function.hh
-  include/roboptim/core/portability.hh
-  include/roboptim/core/parametrized-function.hxx
-  include/roboptim/core/numeric-quadratic-function.hh
-  include/roboptim/core/io.hh
-  include/roboptim/core/solver-error.hh
-  include/roboptim/core/linear-function.hh
-  include/roboptim/core/twice-derivable-function.hh
-  include/roboptim/core/twice-differentiable-function.hh
-  include/roboptim/core/indent.hh
-  include/roboptim/core/constant-function.hh
-  include/roboptim/core/generic-solver.hh
-  include/roboptim/core/fwd.hh
-  include/roboptim/core/problem.hh
-  include/roboptim/core/derivative-size.hh
-  include/roboptim/core/plugin/dummy.hh
-  include/roboptim/core/debug.hh
-  include/roboptim/core/solver-factory.hh
-  include/roboptim/core/derivable-function.hh
-  include/roboptim/core/differentiable-function.hh
-  include/roboptim/core/finite-difference-gradient.hxx
-  include/roboptim/core/finite-difference-gradient.hh
-  include/roboptim/core/solver-warning.hh
-  include/roboptim/core/numeric-linear-function.hh
-  include/roboptim/core/n-times-derivable-function.hxx
-  include/roboptim/core/visualization/gnuplot-function.hh
-  include/roboptim/core/visualization/fwd.hh
-  include/roboptim/core/visualization/gnuplot.hh
-  include/roboptim/core/visualization/gnuplot-commands.hh
-  include/roboptim/core/solver.hh
-  include/roboptim/core/result-with-warnings.hh
-  include/roboptim/core/parametrized-function.hh
-  include/roboptim/core/quadratic-function.hh
-  include/roboptim/core/derivable-parametrized-function.hh
-  include/roboptim/core/filter/split.hh
-  include/roboptim/core/filter/cached-function.hxx
-  include/roboptim/core/filter/split.hxx
-  include/roboptim/core/filter/cached-function.hh
-  include/roboptim/core/util.hh
-  include/roboptim/core.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/result.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/identity-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-factory.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/problem.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/util.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/n-times-derivable-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/sys.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/portability.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-quadratic-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/io.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-error.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/linear-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/twice-derivable-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/twice-differentiable-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/indent.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/constant-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/generic-solver.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/fwd.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/problem.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/derivative-size.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/debug.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-factory.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/derivable-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/differentiable-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/finite-difference-gradient.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/finite-difference-gradient.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-warning.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-linear-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/n-times-derivable-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/fwd.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-commands.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/result-with-warnings.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/quadratic-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/derivable-parametrized-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/split.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/cached-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/split.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/cached-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/util.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core.hh
   )
 
 SETUP_PROJECT()
