Add a class for scalar functions that are the sum of squares of scalar functions
    Class SumOfC1Squares represents the sum of differentiable scalar functions.
    This class enables to define non-linear least square problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-commands.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/sum-of-c1-squares.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/result-with-warnings.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/quadratic-function.hh
