--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ PKG_CONFIG_APPEND_LIBS(roboptim-core)
 # Search for dependencies.
 SEARCH_FOR_BOOST()
 ADD_REQUIRED_DEPENDENCY("eigen3 >= 3.0.0")
+ADD_REQUIRED_DEPENDENCY("liblog4cxx >= 0.10.0")
 
 # Libtool dynamic loading
 # This project does not use Libtool directly but still uses ltdl for
