--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,4 @@
-INSTALL
-Makefile.in
+build*
 _build*
-aclocal.m4
-autom4te.cache/
-config.h.in
-config.h.in~
-configure
-doc/Makefile.in
-src/Makefile.in
-tests/Makefile.in
-tests/testsuite
-+committed/
-,*
-testsuite.log
-libltdl/*
 .version
 .tarball-version
-msvc/*/Debug
-msvc/*/Release
-msvc/*/*.ncb
-msvc/*/*.suo
-msvc/*/*.vcproj.*
