--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libltdl-dev libboost-all-dev \
-liblog4cxx10-dev libeigen3-dev
+  - > sudo apt-get install -qq libltdl-dev libboost-all-dev
+                               liblog4cxx10-dev libeigen3-dev
 language: cpp
 script: mkdir _build && cd _build && cmake . && make && make test
 compiler:
