--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ compiler:
   - clang
   - gcc
 script: "cmake . && make"
+before_install:
+  - git submodule update --init --recursive
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libltdl-dev libboost-all-dev liblog4cxx10-dev libeigen3-dev
