--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script: "cmake . && make"
 before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libltdl-dev libboost-all-dev liblog4cxx10-dev libeigen3-dev
+  - sudo apt-get install -qq doxygen doxygen-latex libltdl-dev libboost-all-dev liblog4cxx10-dev libeigen3-dev
