--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 compiler:
   - clang
   - gcc
-script: "cmake . && make"
+script: "mkdir build && cd build && cmake .. && make && make test"
 before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
