Add plug-in directory location to pkg-config file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,10 @@ SET(HEADERS
 
 SETUP_PROJECT()
 
+# Add extra keys to pkg-config file to export the location of the
+# plug-in directory in a robust manner.
+SET(PKG_CONFIG_EXTRA "plugindir=${CMAKE_INSTALL_PREFIX}/lib/roboptim-core")
+
 # Add main library to pkg-config file.
 PKG_CONFIG_APPEND_LIBS(roboptim-core)
 
