--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,11 @@ SEARCH_FOR_BOOST()
 # Search for Ipopt.
 ADD_REQUIRED_DEPENDENCY("roboptim-core >= 0.5")
 
+# Look for NAG.
+FIND_PATH(NAG_DIR include/nag.h HINTS /opt/NAG/cll6a23dhl/)
+
+INCLUDE_DIRECTORIES("${NAG_DIR}/include")
+
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(tests)
 
