--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,9 +45,10 @@ MACRO(ROBOPTIM_CORE_PLUGIN_NAG_TEST NAME)
     ${COMMON_HEADERS})
   ADD_TEST(${NAME} ${RUNTIME_OUTPUT_DIRECTORY}/${NAME})
 
-  PKG_CONFIG_USE_DEPENDENCY(${NAME} ipopt)
   PKG_CONFIG_USE_DEPENDENCY(${NAME} roboptim-core)
 
   # Link against Boost.
   TARGET_LINK_LIBRARIES(${NAME} ${Boost_LIBRARIES})
 ENDMACRO()
+
+ROBOPTIM_CORE_PLUGIN_NAG_TEST(plugin)
