Provide a way to visualize jacobian structures with Gnuplot.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-linear-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/n-times-derivable-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-function.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-differentiable-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/fwd.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-commands.hh
