--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 compiler:
   - clang
   - gcc
-script: "mkdir build && cd build && cmake .. && make && make test"
+script: "./.travis.build.sh"
 before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
@@ -13,3 +13,6 @@ notifications:
 branches:
   only:
     - master
+matrix:
+  allow_failures:
+    - clang
