--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-warning.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-linear-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/n-times-derivable-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/terminal-color.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/gnuplot-differentiable-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/fwd.hh
