Add non-linear dense solver.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,3 +44,11 @@ SET(PLUGIN_PATH "${CMAKE_BINARY_DIR}/src")
 #SET(CONSTRAINT_TYPE_2 False)
 #SET(PROGRAM_SUFFIX "-simplex")
 #INCLUDE(shared-tests/CMakeLists.txt)
+
+SET(SOLVER_NAME "nag-nlp")
+SET(FUNCTION_TYPE ::roboptim::EigenMatrixDense)
+SET(PROGRAM_SUFFIX "-nlp")
+SET(COST_FUNCTION_TYPE ::roboptim::GenericDifferentiableFunction)
+SET(CONSTRAINT_TYPE_1 ::roboptim::GenericLinearFunction)
+SET(CONSTRAINT_TYPE_2 ::roboptim::GenericDifferentiableFunction)
+INCLUDE(shared-tests/CMakeLists.txt)
