Add test suite for nlp-sparse.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -52,3 +52,11 @@ SET(COST_FUNCTION_TYPE ::roboptim::GenericDifferentiableFunction)
 SET(CONSTRAINT_TYPE_1 ::roboptim::GenericLinearFunction)
 SET(CONSTRAINT_TYPE_2 ::roboptim::GenericDifferentiableFunction)
 INCLUDE(shared-tests/CMakeLists.txt)
+
+SET(SOLVER_NAME "nag-nlp-sparse")
+SET(FUNCTION_TYPE ::roboptim::EigenMatrixSparse)
+SET(PROGRAM_SUFFIX "-nlp-sparse")
+SET(COST_FUNCTION_TYPE ::roboptim::GenericDifferentiableFunction)
+SET(CONSTRAINT_TYPE_1 ::roboptim::GenericLinearFunction)
+SET(CONSTRAINT_TYPE_2 ::roboptim::GenericDifferentiableFunction)
+INCLUDE(shared-tests/CMakeLists.txt)
