--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 9),
                doxygen-latex,
 	       libltdl-dev,
 	       libeigen3-dev,
-	       libboost-dev
+	       libboost-dev,
+	       liblog4cxx10-dev
 Standards-Version: 3.9.4
 Vcs-Browser: https://github.com/roboptim/roboptim-core
 Vcs-Git: git://github.com/roboptim/roboptim-core.git
@@ -24,6 +25,7 @@ Architecture: any
 Depends: libltdl-dev,
 	 libeigen3-dev,
 	 libboost-dev,
+	 liblog4cxx10-dev,
 	 libroboptim-core2 (= ${binary:Version}),
          ${misc:Depends}
 Suggests: libroboptim-core-doc
