--- a/debian/rules
+++ b/debian/rules
@@ -2,10 +2,17 @@
 
 export DEB_BUILD_HARDENING=1
 
-.PHONY: override_dh_strip
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
+.PHONY: override_dh_auto_configure	\
+	override_dh_strip
 
 %:
 	dh  $@ --parallel --with pkgkde_symbolshelper
+
+override_dh_auto_configure:
+	dh_auto_configure -- -DCMAKE_INSTALL_LIBDIR=lib/${DEB_HOST_MULTIARCH}
+
 
 override_dh_strip:
 	dh_strip -a --dbg-package=libroboptim-core2-dbg
