--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,20 @@
 #!/usr/bin/make -f
 
-export DEB_BUILD_MAINT_OPTIONS = hardening=+all,-pie
+# Hardening.
+export DEB_BUILD_MAINT_OPTIONS=hardening=+all,-pie,+fortify
 
+CPPFLAGS:=$(shell dpkg-buildflags --get CPPFLAGS)
+CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
+CXXFLAGS:=$(shell dpkg-buildflags --get CXXFLAGS)
+LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
 
+CFLAGS+=$(CPPFLAGS)
+CXXFLAGS+=$(CPPFLAGS)
+
+# Multiarch.
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
+# Set default symbol visibility to hidden.
 CXXFLAGS+=-fvisibility=hidden
 
 .PHONY: override_dh_auto_configure	\
