--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                doxygen-latex,
 	       libltdl-dev,
 	       libeigen3-dev,
-	       libboost-dev,
+	       libboost-all-dev,
 	       liblog4cxx10-dev
 Standards-Version: 3.9.4
 Vcs-Browser: https://github.com/roboptim/roboptim-core
@@ -24,7 +24,7 @@ Section: libdevel
 Architecture: any
 Depends: libltdl-dev,
 	 libeigen3-dev,
-	 libboost-dev,
+	 libboost-all-dev,
 	 liblog4cxx10-dev,
 	 libroboptim-core2 (= ${binary:Version}),
          ${misc:Depends}
