--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
 	       hardening-wrapper,
 	       pkg-kde-tools (>= 0.6),
                cmake,
+	       pkg-config,
                doxygen,
                doxygen-latex,
 	       libltdl-dev,
