--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,8 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 CXXFLAGS+=-fvisibility=hidden
 
 .PHONY: override_dh_auto_configure	\
-	override_dh_strip
+	override_dh_strip		\
+	override_dh_makeshlibs
 
 %:
 	dh  $@ --parallel --with pkgkde_symbolshelper
@@ -30,3 +31,6 @@ override_dh_auto_configure:
 
 override_dh_strip:
 	dh_strip -a --dbg-package=libroboptim-core2-dbg
+
+override_dh_makeshlibs:
+	dh_makeshlibs -Xroboptim-core-plugin-
