--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Standards-Version: 3.9.4
 Vcs-Browser: https://github.com/roboptim/roboptim-core
 Vcs-Git: git://github.com/roboptim/roboptim-core.git
 Homepage: http://www.roboptim.net/
-
+XS-Testsuite: autopkgtest
 
 Package: libroboptim-core-dev
 Section: libdevel
