Add rpath to NAG libary

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,9 @@ MACRO(NAG_PLUGIN NAME)
 
   SET_TARGET_PROPERTIES(roboptim-core-plugin-${NAME} PROPERTIES
     PREFIX ""
-    SOVERSION 1.1.0)
+    SOVERSION 1.1.0
+    INSTALL_RPATH "${NAG_DIR}/lib"
+    )
 
   INSTALL(TARGETS roboptim-core-plugin-${NAME} DESTINATION ${ROBOPTIM_CORE_PLUGINDIR})
 ENDMACRO()
